# snake-guice

./: .gitignore  .readthedocs.yaml  ExtendingSnakeGuice.md  GuiceBasics.md  InjectingConfiguration.md  Makefile  ProjectHome.md  SimpleWebapp.md  TableOfContents.md  UserGuide.md  UsingProviders.md  WhatToInject.md  dev-requirements.txt  groups  project.config  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  test-guice.yml
docs/source/: conf.py  extending.md  guicebasics.md  index.md  index.rst  injecting_configuration.md  release_notes.rst  userguide.md  using_providers.md  what_to_inject.md
docs/source/examples/: index.md  simple_webapp.md
examples/: test_web.py
examples/cherrypy/: app.py  controller.py  controllers.py  helloapp.py  modules.py  providers.py  scopes.py
examples/shared/: interfaces.py  providers.py
examples/shared/modules/: jinja_module.py  mako_module.py
examples/shared/template_engines/: jinja_engine.py  mako_engine.py
examples/snakeweb/: simple_hello_world.py
examples/templates/: scopes.html.j2  scopes.mako
examples/wsgiapp/: app.py  controllers.py  forms.py  modules.py
releasenotes/notes/: annotation-objects-f2edcd84697b506d.yaml  python-type-annotations-066cc890ced454fd.yaml  significant-upgrades-2257191ad99880a3.yaml
snakeguice/: __init__.py  __pkginfo__.py  _extractor.py  annotation.py  assist.py  binder.py  config.py  decorators.py  injector.py  interceptors.py  interfaces.py  modules.py  multibinder.py  providers.py  scopes.py
snakeguice/extras/: snakeweb.py
specs/: GuiceData_spec.py  builtin_module_spec.py  inheritance_spec.py  injecting_configuration_spec.py  injecting_spec.py  modules_spec.py  private_modules_spec.py  provides_method_spec.py
tests/: cls_heirarchy.py  test_annotation.py  test_assist.py  test_config.py  test_decorators.py  test_injector.py  test_scopes.py  test_singletons.py  test_snakeguice.py  test_snakeweb.py
tests/system/: test_api.py  test_injecting_the_injector.py  test_multibinder.py
