[tool.poetry]
name = "snake-guice"
version = "1.0.0a1"
description = "A simple, lightweight Python dependency injection framework"
authors = ["David Stanek <dstanek@dstanek.com>"]
license = "MIT"
readme = "README.rst"

packages = [
    { include = "snakeguice" },
]

repository = "https://github.com/dstanek/snake-guice"
documentation = ""

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
flake8 = "4.0.1"
black = "22.6.0"
isort = "5.10.1"
Routes = "^2.5.1"
WebOb = "^1.8.7"
Sphinx = "^5.1.1"
myst-parser = "^0.18.0"
reno = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
verbose = true
line-length = 88

[tool.isort]
profile="black"
skip_gitignore = true
