[tool.poetry]
name = "snake-guice"
version = "1.0.0a1"
description = "A simple, lightweight Python dependency injection framework"
authors = ["David Stanek <dstanek@dstanek.com>"]
license = "MIT"
readme = "README.rst"

packages = [
    { include = "snakeguice" },
]

repository = "https://github.com/dstanek/snake-guice"
documentation = "https://snake-guice.readthedocs.io/"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = {version = "^5.3.0", optional = true, extras = ["docs"]}
reno = {version = "^3.5.0", optional = true, extras = ["docs"]}
myst-parser = {version = "^0.18.1", optional = true, extras = ["docs"]}

[tool.poetry.dev-dependencies]
pytest = "7.1.3"
flake8 = "5.0.4"
black = "22.10.0"
isort = "5.10.1"
Routes = "^2.5.1"
WebOb = "^1.8.7"
mypy = "^0.982"

[tool.poetry.extras]
docs = ["Sphinx", "myst-parser", "reno"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
verbose = true
line-length = 88

[tool.isort]
profile="black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
